force-app/main/default/objects/Sequence_Jobs_Settings__c/Sequence_Jobs_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting provides you with the ability to switch the default settings for the Sequence Jobs</description>
    <label>Sequence Jobs Settings</label>
</CustomObject>