force-app/main/default/objects/Sequence_Jobs_Settings__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this box is checked, then the job sequencer will run. If you have a run away queueable job sequence, then disable this setting and let the jobs clear out so the cause of the runaway job can be resolved.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>