force-app/main/default/objects/Sequence_Jobs_Settings__c/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <defaultValue>10</defaultValue>
    <description>This is used to control how many times one job is retried due to there not being enough batch jobs available</description>
    <inlineHelpText>How many times should a job be scheduled to be retried.</inlineHelpText>
    <label>Max Retries</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>