force-app/main/default/objects/Sequence_Jobs_Settings__c/fields/MinutesUntilRetry__c.field-meta.xml
<CustomField>
    <fullName>MinutesUntilRetry__c</fullName>
    <defaultValue>5</defaultValue>
    <description>If a job is unable to execute, the system will use the number defined here to schedule another try in that many minutes</description>
    <inlineHelpText>How many minutes should elapse between retry attempts?</inlineHelpText>
    <label>Minutes Until Retry</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>